fix serverside, hook into extension

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -9,7 +9,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://*/*"],
+            "matches": ["https://*/*", "http://127.0.0.1/*"],
             "js": ["js/jquery-3.3.1.min.js"]
         }
     ],
